grassfeeder (0.0.9) unstable; urgency=low

  * Aggregate Messages on Folder Selection
  * Browser Display :  wrap over   title
  
  
  - Browser: enable theme related colors
  - Browser: Modify  Font size
  - Browser: add Zoom Control
  
  - Graphics:  scale down icons before going into database.
       Example  lisahaven.news       http://feeds.feedburner.com/TechmemeRideHome
  
  - Startup, create gui:  delayed creation of dialogs
  - Updating the tree: speed up the gtk part
  - Subscriptions Sanitize:  Folder shall have only folder icon
  - Subscriptions Sanitize:  test and clean with recursive folders

 -- Marcus der Schlegler <schleglermarcus@posteo.de>  Mon, 10 Oct 2022 00:15:00 +0000

grassfeeder (0.0.8) unstable; urgency=low

  * Search Filter for messages
  * Change Layout: wide bottom line.
  * Delete Messages by delete key
  * Flush Databases on Shutdown: subscr, msg, errors
  * Subscription Tree: hide zeroes when all are read
  * Create Backups for Subscriptions-DB
  * Cleanup messages at configured upper limit
  * Sanitize: cross-check icon ids of tree if they are present in icon db
  * Bugfix: Subscription-edit  text fields are vertically expanding. Shall have fixed height
  * Bugfix: Add-folder   leads to  expanding one that is closed
  * Bugfix: Tree Drag Folders:  the parent items instead of all, don't jump to start
  * Bugfix: Set unread by icon ->  is not processed in following set-read by cursor
  * Workaround for wrong atom  declaration https:// -> http://   linuxcompatible.org

 -- Marcus der Schlegler <schleglermarcus@posteo.de>  Mon, 10 Oct 2022 00:15:00 +0000

grassfeeder (0.0.7) unstable; urgency=low

  * Error-DB of subscription updating errors, display in edit dialog
  * Create  AppImage
  * Databases consistency check  on startup configurable.
  * Browser CleanUp Cache on startup, configurable
  * Menu Item and  Help text into browser
  * Copy Message address into clipboard
  * Database sanitize: remove messages with deleted flag