@@ -1,10 +1,12 @@
 Mon, 10 Oct 2022 00:15:00 +0000
 * Aggregate Messages on Folder Selection
 * Browser Display :  wrap over   title
+* Browser: Modify  Font size
 
 
-- Browser: Modify  Font size
+
 - Browser: add Zoom Control
+
 
 - Graphics:  scale down icons before going into database.
      Example  lisahaven.news       http://feeds.feedburner.com/TechmemeRideHome
