@@ -2,11 +2,12 @@ grassfeeder (0.0.9) unstable; urgency=low
 
   * Aggregate Messages on Folder Selection
   * Browser Display :  wrap over   title
+  * Browser: Modify  Font size
   
   
-  - Browser: enable theme related colors
-  - Browser: Modify  Font size
+  
   - Browser: add Zoom Control
+  
   
   - Graphics:  scale down icons before going into database.
        Example  lisahaven.news       http://feeds.feedburner.com/TechmemeRideHome
@@ -15,6 +16,9 @@ grassfeeder (0.0.9) unstable; urgency=low
   - Updating the tree: speed up the gtk part
   - Subscriptions Sanitize:  Folder shall have only folder icon
   - Subscriptions Sanitize:  test and clean with recursive folders
+  
+  
+  - Browser: enable theme related colors
 
  -- Marcus der Schlegler <schleglermarcus@posteo.de>  Mon, 10 Oct 2022 00:15:00 +0000
 
